# AoC_2021

./: README.md  pyproject.toml
Day_01/: 01_Sonar_Sweep_1.py  01_Sonar_Sweep_2-performance.py  01_Sonar_Sweep_2.py
Day_02/: 02_Dive_1.py  02_Dive_2.py
Day_03/: 03_Binary_Diagnostic_1.py  03_Binary_Diagnostic_2.py
Day_04/: 04_Giant_Squid_1.py  04_Giant_Squid_2.py
Day_05/: 05_Hydrothermal_Venture_1.py  05_Hydrothermal_Venture_2.py
Day_06/: 06_Lanternfish_1.py
Day_07/: 07_The_Treachery_of_Whales_1.py  07_The_Treachery_of_Whales_2.py
Day_08/: 08_Seven_Segment_Search_1.py  08_Seven_Segment_Search_2.py
Day_09/: 09_Smoke_Basin_1.py  09_Smoke_Basin_2.py
Day_10/: 10_Syntax_Scoring_1.py  10_Syntax_Scoring_2.py
Day_11/: 11_Dumbo_Octopus_1.py  11_Dumbo_Octopus_2.py
Day_12/: 12_Passage_Pathing_1.py  12_Passage_Pathing_2.py
Day_13/: 13_Transparent_Origami_1.py  13_Transparent_Origami_2.py
Day_14/: 14_Extended_Polymerization_1.py  14_Extended_Polymerization_2.py
Day_15/: 15_Chiton_1.py  15_Chiton_2.py
Day_16/: 16_Packet_Decoder_1.py  16_Packet_Decoder_2.py
Day_17/: 17_Trick_Shot_1.py  17_Trick_Shot_2.py
Day_18/: 18_Snailfish_1.py  18_Snailfish_2.py
Day_20/: 20_Trench_Map_1.py  20_Trench_Map_2.py
Day_21/: 21_Dirac_Dice_1.py  21_Dirac_Dice_2.py
Day_22/: 22_Reactor_Reboot_1.py  22_Reactor_Reboot_2.py
